Hoàn thành cơ bản login bằng facebook
- Dùng http chưa có https nên chỉ có tài khoản được chỉ định